<resources>
    <string name="app_name">First App</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_surname">Surname</string>
    <string name="btn_text">Greetings</string>
    <string name="btn_reset">Reset</string>
    <string name="greeting1">Welcome, %1$s %2$s</string>
    <string name="greeting2">Welcome, Mr/Mrs %1$s %2$s</string>
    <string name="kindly">Polite</string>
</resources>
