<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:textSize="20sp"
        android:text="@string/lbl_name"
        android:paddingTop="10dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_gravity="center_horizontal"
        android:inputType="textPersonName" />

    <TextView
        android:textSize="20sp"
        android:text="@string/lbl_surname"
        android:paddingTop="10dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/lblSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txt_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_gravity="center_horizontal"
        android:inputType="textPersonName" />

    <CheckBox
        android:id="@+id/checkbox_kindly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kindly" />

    <Button
        android:id="@+id/btn_greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/lbl_response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_gravity="center_horizontal" />



</LinearLayout>


